<resources>
    <string name="app_name">MyDesiminationApp</string>
    <string name="content_splashscreen">Gambar Splashscreen</string>
    <string name="login_student">Login Mahasiswa</string>
    <string name="email_lectrurer">Email Dosen</string>
    <string name="password_lecturer">Password Dosen</string>
    <string name="login_name_administrator">Nama</string>
    <string name="password_admin">Password Admin</string>
    <string name="password_admin_two">Password Admin Ke-2</string>
    <string name="login_lecturer">Login Dosen</string>
    <string name="lecturer">Dosen Pembimbing</string>
    <string name="login_administrator">Login Admin</string>
    <string name="team_research">Tim Peneliti</string>
    <string name="research_team_management">Manajemen Tim Peneliti</string>
    <string name="team_member_0">Anggota Peneliti 0</string>
    <string name="team_member_1">Anggota Peneliti 1</string>
    <string name="team_member_2">Anggota Peneliti 2</string>
    <string name="presentation_materials">Bahan Presentasi</string>
    <string name="free_admin">Bebas Admin</string>
    <string name="determination_decision">Surat Keputusan Penetapan</string>
    <string name="in_lecturer">Masuk</string>
    <string name="research_document">Dokumen Penelitian</string>
    <string name="schedule_dessimination">Jadwal Dessiminasi</string>
    <string name="change_status_back_new">Ubah Status Ke Baru kembali</string>
    <string name="number_issn">Nomor ISSN</string>
    <string name="page_article">Laman Artikel</string>
    <string name="number_journal">Nomor Jurnal</string>
    <string name="name_journal">Nama Jurnal</string>
    <string name="volume_journal">Volume Jurnal</string>
    <string name="year_journal">Tahun Jurnal</string>
    <string name="category_journal">Kategori Jurnal</string>
    <string name="nim_student">NIM</string>
    <string name="page_publisher">Laman Penerbit</string>
    <string name="id_desimination_research">ID Desiminasi Penelitian</string>
    <string name="password_student">Password Mahasiswa</string>
    <string name="title_logo_desimination">SISKA DESIMINATION PENELITIAN</string>
    <string name="text_id_desimination">ID</string>
    <string name="save">Simpan</string>
    <string name="change_status_to_draft_registration">Ubah Status Ke Draft Pendaftaran</string>
    <string name="note">Catatan</string>
    <string name="research_desimination">Desiminasi Penelitian</string>
    <string name="assignment_as_chair_researcher">Penugasan Sebagai %s</string>
    <string name="edit">Koreksi</string>
    <string name="find_student">Cari</string>
    <string name="name_student">Nama Mahasiswa</string>
    <string name="journal">Jurnal</string>
    <string name="keyword">Kata Kunci</string>
    <string name="publisher">Penerbit</string>
    <string name="abstrak">Abstrak</string>
    <string name="register_submitted_to_study_program">Pendaftaran Diajukan Ke Program Studi</string>
    <string name="register_rejected_from_lecturer">Pendaftaran Ditolak Dosen Pembimbing</string>
    <string name="review">Ulasan</string>
    <string name="blank_form">Kosongkan Formulir</string>
    <string name="warning">Peringatan</string>
    <string name="back">Kembali</string>
    <string name="text_title_desimination">Judul Penelitian</string>
    <string name="leader_dummy">Andre Juan Simanjuntak</string>
    <string name="text_leader_desimination">Ketua Peneliti</string>
    <string name="text_status_desimination">Status</string>
    <string name="add_desimination">Tambah Desiminasi Baru</string>
    <string name="add_leader_desimination">Tambah Desiminasi Penelitian</string>
    <string name="on_the_day">Pada Hari</string>
    <string name="status_desimination">Status Desiminasi</string>
    <string name="by_name">Oleh</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Pergi ke pengaturan</string>
    <string name="action">Aksi</string>
    <string name="password_and_email_wrong">Email atau Password anda salah</string>
    <string name="login_success">Anda berhasil login</string>
    <string name="login_as_lecturer">Login sebagai dosen</string>
    <string name="login_as_student">Login sebagai mahasiswa</string>
    <string name="login_as_administrator">Login sebagai administrator</string>
    <string name="ok">Oke</string>
    <string name="logout">Keluar</string>
    <string name="email_and_password_not_blank">Email dan Password tidak boleh kosong</string>
</resources>