<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_marginTop="80dp"
        android:background="@color/background_dialog"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="400dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_leader_desimination"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/white"
                android:elevation="5dp"
                android:hint="@string/text_leader_desimination"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_leader_desimination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_leader_desimination">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save_leader_desimination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/color_btn_login"
                    android:text="@string/save"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btn_save_leader_desimination"
                    android:backgroundTint="@android:color/white"
                    android:drawableLeft="@drawable/baseline_arrow_back_24"
                    android:elevation="5dp"
                    android:text="@string/back"
                    android:textColor="@android:color/black"
                    app:cornerRadius="8dp" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_find_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_btn_login"
                android:drawableLeft="@drawable/baseline_search_24"
                android:text="@string/find_student"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
                app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
                app:layout_constraintStart_toStartOf="@+id/til_leader_desimination"
                app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear_text"
                android:layout_width="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_blank_form"
                android:drawableLeft="@drawable/baseline_close_24"
                android:text="@string/blank_form"
                app:layout_constraintEnd_toEndOf="@id/relativeLayout"
                app:layout_constraintStart_toStartOf="@id/btn_find_student"
                app:layout_constraintTop_toBottomOf="@id/relativeLayout"
                app:cornerRadius="8dp"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>





</androidx.constraintlayout.widget.ConstraintLayout>