<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/id_desimination_research"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/id_desimination_research"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/value_id_desimination_research"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/id_desimination_research"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/id_desimination_research"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/id_desimination_research"
                    app:layout_constraintTop_toTopOf="@id/id_desimination_research" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status_desimination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_status_desimination"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/id_desimination_research"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/id_desimination_research" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/value_status_desimination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_status_desimination"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/status_desimination"
                    app:layout_constraintEnd_toEndOf="@id/value_id_desimination_research"
                    app:layout_constraintStart_toEndOf="@id/status_desimination"
                    app:layout_constraintTop_toTopOf="@id/status_desimination" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lecturer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lecturer"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/status_desimination"
                    app:layout_constraintStart_toStartOf="@id/status_desimination"
                    app:layout_constraintTop_toBottomOf="@id/status_desimination" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/value_lecturer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lecturer"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lecturer"
                    app:layout_constraintEnd_toEndOf="@id/value_id_desimination_research"
                    app:layout_constraintStart_toEndOf="@id/lecturer"
                    app:layout_constraintTop_toTopOf="@id/lecturer" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/leader_desimination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_leader_desimination"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/lecturer"
                    app:layout_constraintStart_toStartOf="@id/lecturer"
                    app:layout_constraintTop_toBottomOf="@id/lecturer" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/value_leader_desimination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_leader_desimination"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/leader_desimination"
                    app:layout_constraintEnd_toEndOf="@id/value_id_desimination_research"
                    app:layout_constraintStart_toEndOf="@id/leader_desimination"
                    app:layout_constraintTop_toTopOf="@id/leader_desimination" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/color_btn_action"
                    android:drawableLeft="@drawable/baseline_arrow_back_24"
                    android:text="@string/back"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintStart_toStartOf="@id/leader_desimination"
                    app:layout_constraintTop_toBottomOf="@id/leader_desimination" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/color_btn_action"
                    android:drawableLeft="@drawable/baseline_folder_24"
                    android:text="@string/note"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/btn_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.929"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="@id/btn_back"
                    app:layout_constraintVertical_bias="1.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/color_btn_action"
                    android:drawableLeft="@drawable/baseline_folder_24"
                    android:text="@string/review"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="@id/btn_back"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/btn_back"
                    app:layout_constraintTop_toBottomOf="@id/btn_back" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_btn_action"
                    android:drawableLeft="@drawable/baseline_edit_24"
                    android:text="@string/edit"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/btn_review"
                    app:layout_constraintEnd_toEndOf="@id/btn_note"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/btn_note"
                    app:layout_constraintTop_toTopOf="@id/btn_review"
                    app:layout_constraintVertical_bias="1.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_status_to_registration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/btn_change_status_to_draft_registration"
                    android:drawableLeft="@drawable/baseline_autorenew_24"
                    android:text="@string/change_status_to_draft_registration"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="@id/btn_edit"
                    app:layout_constraintStart_toStartOf="@id/btn_review"
                    app:layout_constraintTop_toBottomOf="@id/btn_review" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_blank_form"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btn_blank_form"
                    android:drawableLeft="@drawable/baseline_close_24"
                    android:text="@string/blank_form"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_edit"
                    app:layout_constraintStart_toStartOf="@+id/btn_review"
                    app:layout_constraintTop_toBottomOf="@id/btn_change_status_to_registration" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>